--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/db": "^0.10.5",
     "@astrojs/node": "^8.2.5",
+    "@astrojs/react": "^3.3.1",
     "@auth/core": "^0.18.6",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "astro": "^4.6.3",
     "auth-astro": "^4.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sonner": "^1.4.41",
     "typescript": "^5.4.5"
   }
 }
