--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
-    "@astrojs/db": "^0.10.5",
+    "@astrojs/db": "^0.10.6",
     "@astrojs/node": "^8.2.5",
     "@astrojs/react": "^3.3.1",
     "@auth/core": "^0.18.6",
@@ -23,5 +23,8 @@
     "react-dom": "^18.2.0",
     "sonner": "^1.4.41",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.6"
   }
 }
