--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/db": "^0.10.6",
     "@astrojs/node": "^8.2.5",
     "@astrojs/react": "^3.3.1",
+    "@astrojs/vercel": "^7.5.4",
     "@auth/core": "^0.18.6",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
